admin section added

--- a/views/admin/admin_dashboard.ejs
+++ b/views/admin/admin_dashboard.ejs
@@ -6,7 +6,7 @@
 <head>
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
-    <title>Blushely - Admin Dashboard</title>
+    <title>Teraxo - Admin Dashboard</title>
 
     <meta name="author" content="">
 
@@ -26,8 +26,8 @@
     <link rel="stylesheet" href="/admin-icon/style.css">
 
     <!-- Favicon and Touch Icons  -->
-    <link rel="shortcut icon" href="/images/logo/blushley-png-without-shade.png">
-    <link rel="apple-touch-icon-precomposed" href="/images/logo/blushley-png-without-shade.png">
+    <link rel="shortcut icon" href="/images/teraxo/logo.png">
+    <link rel="apple-touch-icon-precomposed" href="/images/teraxo/logo.png">
     <style>
         /* Grid Layout */
         .category-grid {
@@ -139,9 +139,9 @@
                     <div class="box-logo">
                         <a href="/admin/dashboard" id="site-logo-inner">
                             <img style="width:60px;" id="logo_header" alt="logo"
-                                src="/images/logo/blushley-png-without-shade.png"
-                                data-light="/images/logo/blushley-png-without-shade.png"
-                                data-dark="/images/logo/blushley-png-without-shade.png">
+                                src="/images/teraxo/logo.png"
+                                data-light="/images/teraxo/logo.png"
+                                data-dark="/images/teraxo/logo.png">
                         </a>
                         <div class="button-show-hide">
                             <i class="icon-chevron-left"></i>
@@ -165,12 +165,6 @@
                                         </a>
                                     </li>
 
-                                    <li class="menu-item">
-                                        <a href="/admin/categories" class="menu-item-button">
-                                            <div class="icon"><i class="icon-folder"></i></div>
-                                            <div class="text">Category Management</div>
-                                        </a>
-                                    </li>
 
                                     <li class="menu-item">
                                         <a href="/admin/products" class="menu-item-button">
@@ -178,50 +172,12 @@
                                             <div class="text">Product Management</div>
                                         </a>
                                     </li>
-                                    <li class="menu-item">
-                                        <a href="/admin/beautyTips" class="menu-item-button">
-                                            <div class="icon"><i class="icon-shopping-bag"></i></div>
-                                            <div class="text">beautyTip Management</div>
-                                        </a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a href="/admin/reseller_products" class="menu-item-button">
-                                            <div class="icon"><i class="icon-heart"></i></div>
-                                            <div class="text">Sellers Management</div>
-                                        </a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a href="/admin/orders" class="menu-item-button">
-                                            <div class="icon"><i class="icon-shopping-cart"></i></div>
-                                            <div class="text">Order Management</div>
-                                        </a>
-                                    </li>
+                             
+                         
 
-                                    <li class="menu-item ">
-                                        <a href="/admin/bookings" class="menu-item-button">
-                                            <div class="icon"><i class="icon-calendar"></i></div>
-                                            <div class="text">Booking Management</div>
-                                        </a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a href="/admin/saloon" class="menu-item-button">
-                                            <div class="icon"><i class="icon-scissors"></i></div>
-                                            <div class="text">Salons Management</div>
-                                        </a>
-                                    </li>
+                       
+                         
 
-                                    <li class="menu-item">
-                                        <a href="/admin/freelance" class="menu-item-button">
-                                            <div class="icon"><i class="icon-users"></i></div>
-                                            <div class="text">Freelance Management</div>
-                                        </a>
-                                    </li>
-                                    <li class="menu-item ">
-                                        <a href="/admin/users" class="menu-item-button">
-                                            <div class="icon"><i class="icon-users"></i></div>
-                                            <div class="text">User Management</div>
-                                        </a>
-                                    </li>
                                     <li class="menu-item">
                                         <a href="/admin/banner" class="menu-item-button">
                                             <div class="icon"><i class="icon-image"></i></div>
@@ -244,7 +200,7 @@
                                     </li>
 
                                     <li class="menu-item">
-                                        <a href="/logout">
+                                        <a href="/admin/logout">
                                             <div class="icon">
                                                 <svg width="24" height="22" viewBox="0 0 20 20" fill="none"
                                                     xmlns="http://www.w3.org/2000/svg">
@@ -270,9 +226,9 @@
                             <div class="header-left">
                                 <a href="index.html">
                                     <img class="" id="logo_header_mobile" alt=""
-                                        src="/images/logo/blushley-png-without-shade.png"
-                                        data-light="/images/logo/blushley-png-without-shade.png"
-                                        data-dark="/images/logo/blushley-png-without-shade.png">
+                                        src="/images/teraxo/logo.png"
+                                        data-light="/images/teraxo/logo.png"
+                                        data-dark="/images/teraxo/logo.png">
                                 </a>
                                 <div class="button-show-hide">
                                     <i class="icon-chevron-left"></i>
@@ -434,10 +390,10 @@
                                             id="dropdownMenuButton3" data-bs-toggle="dropdown" aria-expanded="false">
                                             <span class="header-user wg-user">
                                                 <span class="image">
-                                                    <img src="/images/logo/Blushley-png-logo.png" alt="">
+                                                    <img style="object-fit: contain;" src="/images/teraxo/logo.png" alt="">
                                                 </span>
                                                 <span class="flex flex-column">
-                                                    <span class="body-text text-main-dark">Blushley</span>
+                                                    <span class="body-text text-main-dark">Teraxo</span>
                                                     <span class="text-tiny">Beauty Admin</span>
                                                 </span>
                                             </span>
@@ -638,7 +594,7 @@
                                                 </div>
                                                 <div>
                                                     <div class="flex gap9 items-center">
-                                                        <div class="body-text mt-2 mb-4">Beauticians</div>
+                                                        <div class="body-text mt-2 mb-4">Demand Growth</div>
                                                         <div class="box-icon-trending up color-violet">
                                                             <i class="icon-trending-up"></i>
                                                             <div class="body-title number">3.21%</div>
@@ -857,101 +813,87 @@
                                                 </div>
                                             </div>
                                             <ul class="flex flex-column h-full has-divider-line">
-                                                <li class="wg-product">
-                                                    <div class="name flex-grow">
-                                                        <div class="image">
-                                                            <img src="/images/beautician/beautician1.png"
-                                                                alt="Bridal Makeup">
-                                                        </div>
-                                                        <div>
-                                                            <div class="title">
-                                                                <a href="#" class="body-text">Bridal Makeup</a>
-                                                            </div>
-                                                            <div class="price text-tiny">₹8,500 / session</div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="sale body-text">Booked</div>
-                                                </li>
+                                          
 
-                                                <li class="wg-product">
-                                                    <div class="name flex-grow">
-                                                        <div class="image">
-                                                            <img src="/images/beautician/beautician1.png"
-                                                                alt="Luxury Facial">
-                                                        </div>
-                                                        <div>
-                                                            <div class="title">
-                                                                <a href="#" class="body-text">Luxury Facial</a>
-                                                            </div>
-                                                            <div class="price text-tiny">₹2,800 / session</div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="sale body-text">Available</div>
-                                                </li>
 
-                                                <li class="wg-product">
-                                                    <div class="name flex-grow">
-                                                        <div class="image">
-                                                            <img src="/images/beautician/beautician1.png"
-                                                                alt="Hair Styling">
-                                                        </div>
-                                                        <div>
-                                                            <div class="title">
-                                                                <a href="#" class="body-text">Hair Styling</a>
-                                                            </div>
-                                                            <div class="price text-tiny">₹1,500 / session</div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="sale body-text">Booked</div>
-                                                </li>
 
-                                                <li class="wg-product">
-                                                    <div class="name flex-grow">
-                                                        <div class="image">
-                                                            <img src="/images/beautician/beautician1.png"
-                                                                alt="Makeup Lessons">
-                                                        </div>
-                                                        <div>
-                                                            <div class="title">
-                                                                <a href="#" class="body-text">Makeup Lessons</a>
-                                                            </div>
-                                                            <div class="price text-tiny">₹3,200 / session</div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="sale body-text">Available</div>
-                                                </li>
 
-                                                <li class="wg-product">
-                                                    <div class="name flex-grow">
-                                                        <div class="image">
-                                                            <img src="/images/beautician/beautician1.png"
-                                                                alt="Skin Consultation">
-                                                        </div>
-                                                        <div>
-                                                            <div class="title">
-                                                                <a href="#" class="body-text">Skin Consultation</a>
-                                                            </div>
-                                                            <div class="price text-tiny">₹1,200 / session</div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="sale body-text">Available</div>
-                                                </li>
 
-                                                <li class="wg-product">
-                                                    <div class="name flex-grow">
-                                                        <div class="image">
-                                                            <img src="/images/beautician/beautician1.png"
-                                                                alt="Party Makeup">
-                                                        </div>
-                                                        <div>
-                                                            <div class="title">
-                                                                <a href="#" class="body-text">Party Makeup</a>
-                                                            </div>
-                                                            <div class="price text-tiny">₹3,500 / session</div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="sale body-text">Booked</div>
-                                                </li>
+<li class="wg-product">
+    <div class="name flex-grow">
+        <div class="image">
+            <img src="/images/teraxo/prd-2.webp" alt="Elite40">
+        </div>
+        <div>
+            <div class="title">
+                <a href="#" class="body-text">Elite40 – Footwear</a>
+            </div>
+            <div class="price text-tiny">Premium Footwear</div>
+        </div>
+    </div>
+    <div class="sale body-text">Premium</div>
+</li>
+
+<li class="wg-product">
+    <div class="name flex-grow">
+        <div class="image">
+            <img src="/images/teraxo/prd-2.webp" alt="F40">
+        </div>
+        <div>
+            <div class="title">
+                <a href="#" class="body-text">F40 – Footwear Grade</a>
+            </div>
+            <div class="price text-tiny">Sole Bonding</div>
+        </div>
+    </div>
+    <div class="sale body-text">Footwear</div>
+</li>
+
+<li class="wg-product">
+    <div class="name flex-grow">
+        <div class="image">
+            <img src="/images/teraxo/prd-2.webp" alt="G40">
+        </div>
+        <div>
+            <div class="title">
+                <a href="#" class="body-text">G40 – Gel Adhesive</a>
+            </div>
+            <div class="price text-tiny">Vertical / Gap Filling</div>
+        </div>
+    </div>
+    <div class="sale body-text">Gel</div>
+</li>
+
+<li class="wg-product">
+    <div class="name flex-grow">
+        <div class="image">
+            <img src="/images/teraxo/prd-2.webp" alt="AS40">
+        </div>
+        <div>
+            <div class="title">
+                <a href="#" class="body-text">AS40 – Activator Spray</a>
+            </div>
+            <div class="price text-tiny">Fast Curing</div>
+        </div>
+    </div>
+    <div class="sale body-text">Activator</div>
+</li>
+
+<li class="wg-product">
+    <div class="name flex-grow">
+        <div class="image">
+            <img src="/images/teraxo/prd-2.webp" alt="Glue Stick">
+        </div>
+        <div>
+            <div class="title">
+                <a href="#" class="body-text">Glue Stick – Hot Melt</a>
+            </div>
+            <div class="price text-tiny">Craft & Wood</div>
+        </div>
+    </div>
+    <div class="sale body-text">Hot Melt</div>
+</li>
+
                                             </ul>
                                         </div>
                                         <!-- /top-countries -->
