--- a/views/admin/admin_testimonials.ejs
+++ b/views/admin/admin_testimonials.ejs
@@ -4,7 +4,7 @@
 <head>
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
-    <title>Blushely - Admin Testimonials</title>
+    <title>Teraxo - Admin Testimonials</title>
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -24,8 +24,8 @@
     <link rel="stylesheet" href="/admin-icon/style.css">
 
     <!-- Favicon and Touch Icons  -->
-    <link rel="shortcut icon" href="/images/logo/blushley-png-without-shade.png">
-    <link rel="apple-touch-icon-precomposed" href="/images/logo/blushley-png-without-shade.png">
+    <link rel="shortcut icon" href="/images/teraxo/logo.png">
+    <link rel="apple-touch-icon-precomposed" href="/images/teraxo/logo.png">
     <style>
         /* Ensure toggle switch is visible */
         .peer:checked~.peer-checked\:bg-blue-600 {
@@ -278,8 +278,8 @@
                <div class="section-menu-left">
                     <div class="box-logo">
                         <a href="/admin/dashboard" id="site-logo-inner">
-                            <img style="width:60px;" id="logo_header" alt="logo" src="/images/logo/blushley-png-without-shade.png"
-                                data-light="/images/surya-logo.png" data-dark="/images/surya-logo.png">
+                            <img style="width:60px;" id="logo_header" alt="logo" src="/images/teraxo/logo.png"
+                                data-light="/images/teraxo/logo.png" data-dark="/images/teraxo/logo.png">
                         </a>
                         <div class="button-show-hide">
                             <i class="icon-chevron-left"></i>
@@ -303,12 +303,7 @@
                                         </a>
                                     </li>
                                     
-                                    <li class="menu-item">
-                                        <a href="/admin/categories" class="menu-item-button">
-                                            <div class="icon"><i class="icon-folder"></i></div>
-                                            <div class="text">Category Management</div>
-                                        </a>
-                                    </li>
+
 
                                     <li class="menu-item">
                                         <a href="/admin/products" class="menu-item-button">
@@ -316,50 +311,14 @@
                                             <div class="text">Product Management</div>
                                         </a>
                                     </li>
-                                    <li class="menu-item">
-                                        <a href="/admin/beautyTips" class="menu-item-button">
-                                            <div class="icon"><i class="icon-shopping-bag"></i></div>
-                                            <div class="text">beautyTip Management</div>
-                                        </a>
-                                    </li>
-                                    <li class="menu-item ">
-                                        <a href="/admin/reseller_products" class="menu-item-button">
-                                            <div class="icon"><i class="icon-heart"></i></div>
-                                            <div class="text">Sellers Management</div>
-                                        </a>
-                                    </li>
-<li class="menu-item">
-                                        <a href="/admin/orders" class="menu-item-button">
-                                            <div class="icon"><i class="icon-shopping-cart"></i></div>
-                                            <div class="text">Order Management</div>
-                                        </a>
-                                    </li>
 
-                                    <li class="menu-item ">
-                                        <a href="/admin/bookings" class="menu-item-button">
-                                            <div class="icon"><i class="icon-calendar"></i></div>
-                                            <div class="text">Booking Management</div>
-                                        </a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a href="/admin/saloon" class="menu-item-button">
-                                            <div class="icon"><i class="icon-scissors"></i></div>
-                                            <div class="text">Salons Management</div>
-                                        </a>
-                                    </li>
+                               
 
-                                    <li class="menu-item">
-                                        <a href="/admin/freelance" class="menu-item-button">
-                                            <div class="icon"><i class="icon-users"></i></div>
-                                            <div class="text">Freelance Management</div>
-                                        </a>
-                                    </li>
-    <li class="menu-item ">
-                                        <a href="/admin/users" class="menu-item-button">
-                                            <div class="icon"><i class="icon-users"></i></div>
-                                            <div class="text">User Management</div>
-                                        </a>
-                                    </li>
+
+                           
+
+                                
+
                                     <li class="menu-item">
                                         <a href="/admin/banner" class="menu-item-button">
                                             <div class="icon"><i class="icon-image"></i></div>
@@ -382,7 +341,7 @@
                                     </li>
 
                                     <li class="menu-item">
-                                        <a href="/logout">
+                                        <a href="/admin/logout">
                                             <div class="icon">
                                                 <svg width="24" height="22" viewBox="0 0 20 20" fill="none"
                                                     xmlns="http://www.w3.org/2000/svg">
@@ -407,8 +366,8 @@
                         <div class="wrap">
                             <div class="header-left">
                                 <a href="/admin/dashboard">
-                                    <img style="width: 50px;" id="logo_header_mobile" alt="" src="/images/surya-logo.png"
-                                        data-light="/images/surya-logo.png" data-dark="/images/surya-logo.png">
+                                    <img style="width: 50px;" id="logo_header_mobile" alt="" src="/images/teraxo/logo.png"
+                                        data-light="/images/teraxo/logo.png" data-dark="/images/teraxo/logo.png">
                                 </a>
                                 <div class="button-show-hide">
                                     <i class="icon-chevron-left"></i>
@@ -431,10 +390,10 @@
                                             id="dropdownMenuButton3" data-bs-toggle="dropdown" aria-expanded="false">
                                             <span class="header-user wg-user">
                                                 <span class="image">
-                                                    <img src="/images/logo/blushley-png-without-shade.png" alt="">
+                                                    <img src="/images/teraxo/logo.png" alt="">
                                                 </span>
                                                 <span class="flex flex-column">
-                                                    <span class="body-text text-main-dark">Blushelys</span>
+                                                    <span class="body-text text-main-dark">Teraxo</span>
                                                     <span class="text-tiny">Admin</span>
                                                 </span>
                                             </span>
@@ -451,7 +410,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="/logout" class="user-item">
+                                                <a href="/admin/logout" class="user-item">
                                                     <div class="icon">
                                                         <i class="icon-log-out"></i>
                                                     </div>
