--- a/views/admin/admin_login.ejs
+++ b/views/admin/admin_login.ejs
@@ -39,11 +39,16 @@
                         <div>
                             <h3>Login to Admin Dashboard</h3>
                             <div class="body-text text-white"> Enter your email & password to login</div>
+                            <% if (typeof error !== 'undefined' && error) { %>
+                                <div style="color: #ff4444; background: rgba(255,68,68,0.1); padding: 10px; border-radius: 5px; margin-top: 10px; margin-bottom: 10px;">
+                                    <%= error %>
+                                </div>
+                            <% } %>
                         </div>
-                        <form class="form-login flex flex-column gap22 w-full" action="/admin-login" method="post">
+                        <form class="form-login flex flex-column gap22 w-full" action="/admin/login" method="post">
                             <fieldset class="email">
                                 <div class="body-title mb-10 text-white">Email address <span class="tf-color-1">*</span></div>
-                                <input class="flex-grow" type="email" placeholder="Enter your admin email id" name="email" tabindex="0" value="" aria-required="true" required="">
+                                <input class="flex-grow" type="email" placeholder="Enter your admin email id" name="username" tabindex="0" value="" aria-required="true" required="">
                             </fieldset>
                             <fieldset class="password">
                                 <div class="body-title mb-10 text-white">Password <span class="tf-color-1">*</span></div>
